<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.parking.ClassesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_task_constraint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/task_constraint_layout_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/task_constraint_layout_margin"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/task_title_height"
            android:text="@string/add_task_text"
            android:textAlignment="center"
            android:textSize="@dimen/task_title_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_task_name"
            android:layout_width="@dimen/enter_task_width"
            android:layout_height="@dimen/enter_task_height"
            android:hint="@string/add_task_hint"
            android:textSize="@dimen/enter_task_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <TextView
            android:id="@+id/new_task_due"
            android:layout_width="@dimen/due_date_width"
            android:layout_height="@dimen/due_date_height"
            android:text="@string/due_date_text"
            android:textSize="@dimen/due_date_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_task_name" />

        <Button
            android:id="@+id/calendar_button"
            android:layout_width="@dimen/cal_btn_width"
            android:layout_height="@dimen/cal_btn_height"
            android:background="@drawable/calendar"
            app:layout_constraintLeft_toRightOf="@id/new_task_due"
            app:layout_constraintTop_toBottomOf="@id/new_task_name" />

        <Button
            android:id="@+id/add_new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/new_task_notes"
            android:layout_width="@dimen/notes_width"
            android:layout_height="@dimen/notes_height"
            android:hint="@string/additional_notes_hint"
            android:textSize="@dimen/notes_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Spinner
            android:id="@+id/task_spinner"
            android:layout_width="@dimen/task_type_width"
            android:layout_height="@dimen/task_type_height"
            android:dropDownWidth="wrap_content"
            android:entries="@array/task_types"
            android:visibility="visible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:layout_editor_absoluteX="311dp"
            tools:layout_editor_absoluteY="40dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tasks_list_height"
        android:layout_marginTop="@dimen/tasks_list_margin"
        app:layout_constraintTop_toBottomOf="@id/add_task_constraint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.app.parking.ClassFragment"
        tools:listitem="@layout/task_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>